remove special surefire setup