@@ -180,14 +180,6 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M6</version>
-                <configuration>
-                    <!-- required due to https://github.com/apache/maven-surefire/pull/263 -->
-                    <argLine>
-                       ${jvm.extraArgs}
-                       --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
-                       --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-                    </argLine>
-                </configuration>
             </plugin>
 
             <plugin>
